WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251409
Infinite recursion in propagateRepaintToParentWithOutlineAutoIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=251409
Summary
Infinite recursion in propagateRepaintToParentWithOutlineAutoIfNeeded
Chirag M Shah
Reported
2023-01-30 17:36:24 PST
rdar://104814038
Attachments
Add attachment
proposed patch, testcase, etc.
Chirag M Shah
Comment 1
2023-01-30 17:40:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9359
EWS
Comment 2
2023-02-01 16:13:27 PST
Committed
259725@main
(37ea7633b1ef): <
https://commits.webkit.org/259725@main
> Reviewed commits have been landed. Closing PR #9359 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug