Cherry-pick 37ea7633b1ef. rdar://problem/104814038

Fix infinite recursion in propagateRepaintToParentWithOutlineAutoIfNeeded
    https://bugs.webkit.org/show_bug.cgi?id=251409
    rdar://104814038

    Reviewed by Alan Baradlay.

    Now that we map the removed element to the placeholder, we need to use
    the original renderer for comparison otherwise we would cause infinite
    recursion.

    * Source/WebCore/rendering/RenderObject.cpp:
    (WebCore::RenderObject::propagateRepaintToParentWithOutlineAutoIfNeeded const):

    Canonical link: https://commits.webkit.org/259725@main

Canonical link: https://commits.webkit.org/259548.106@safari-7615-branch